# Verbium

./: .gitignore  Cargo.toml  PLUGIN_REQUIREMENTS.md  README-Chinese.md  README.md  ai_agent_chat_ui_demo.html  build.rs  launcher_config.toml
Docs/: Agent_Plugin_Design.md  Architecture.md  Bevy_Editor_Integration_Plan.md  Launcher_Design.md  Launcher_Integration_Spec.md  Launcher_Spec.md  Plugin_Development.md  Plugin_Development_Guide.md  Refactor_Task_5_FileManager_Interactions.md  Terminal_Technical_Challenges.md  Unleash_the_Rust_Revolution.txt  《掀起滔天巨浪！让“Rust革命”的熊熊烈火燃遍程序世界的每一个角落！》.txt
Docs/过时/: Refactor_Task_1_Async_IO.md  Refactor_Task_2_System_Abstraction.md  Refactor_Task_3_Unified_Metadata.md  Refactor_Task_4_Notification_System.md
launcher/: launcher_config.toml
launcher/src/: main.rs
src/: app.rs  lib.rs
src/plugins/: core.rs  generated.rs  mod.rs
src/plugins/agent/: mod.rs  models.rs  plugin.rs  plugin.toml  tab.rs
src/plugins/browser/: mod.rs  plugin.toml  tab.rs  webview.rs  widgets.rs
src/plugins/code_editor/: mod.rs  plugin.toml
src/plugins/file_manager/: mod.rs
src/plugins/manager/: mod.rs  plugin.toml
src/plugins/terminal/: mod.rs  plugin.toml
src/plugins/test_plugin/: mod.rs  plugin.toml
