[package]
name = "verbium"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
egui_dock = "0.14.0"

# --- BEGIN PLUGIN DEPENDENCIES ---
# From manager
anyhow = "1.0"
# From agent & manager
rfd = "0.14"
# From agent & manager
serde = { features = ["derive"], version = "1.0" }
# From agent & manager
toml = "0.8"
# From manager
toml_edit = "0.22"
# From manager
walkdir = "2.3"
# From manager
zip = "0.6"
# --- END PLUGIN DEPENDENCIES ---

[features]
default = ["plugin_agent", "plugin_manager"]
plugin_agent = []
plugin_code_editor = []
plugin_file_manager = []
plugin_manager = []
plugin_terminal = []
plugin_test_plugin = []
# --- END PLUGIN FEATURES ---

[build-dependencies]
toml = "0.8"
